--- a/SetGame/Info.plist
+++ b/SetGame/Info.plist
@@ -2,18 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>UIAppFonts</key>
-	<array>
-		<string>BPreplay.otf</string>
-		<string>BPreplayBold.otf</string>
-		<string>BPreplayBoldItalics.otf</string>
-		<string>BPreplayItalics.otf</string>
-		<string>CheGuevaraBarry-Brown.ttf</string>
-	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>Graphical Set Game</string>
+	<string>Match The Pack</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -30,6 +22,14 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>BPreplay.otf</string>
+		<string>BPreplayBold.otf</string>
+		<string>BPreplayBoldItalics.otf</string>
+		<string>BPreplayItalics.otf</string>
+		<string>CheGuevaraBarry-Brown.ttf</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
