Unit tests added.

--- a/SetGame.xcodeproj/xcshareddata/xcschemes/SetGame.xcscheme
+++ b/SetGame.xcodeproj/xcshareddata/xcschemes/SetGame.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "3D72270B23103A5C00CC230D"
+               BuildableName = "SetGameTests.xctest"
+               BlueprintName = "SetGameTests"
+               ReferencedContainer = "container:SetGame.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
