Unit tests re-added from before (git lost this unit testing part at some point).

--- a/SetGame.xcodeproj/xcshareddata/xcschemes/SetGame.xcscheme
+++ b/SetGame.xcodeproj/xcshareddata/xcschemes/SetGame.xcscheme
@@ -38,6 +38,16 @@
                ReferencedContainer = "container:SetGame.xcodeproj">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "3D06B60423229DC800C03A99"
+               BuildableName = "UnitTests.xctest"
+               BlueprintName = "UnitTests"
+               ReferencedContainer = "container:SetGame.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
